# gage_python

./: .gitattributes  .gitignore  CLAUDE.md  README.md  _migrate_cal_sidecars.py  conftest.py  launch_aline.py  launch_beammap.py  launch_find_spatial_peak.py  launch_find_spatial_peak_brent.py  launch_mmode.py  launch_motion_control.py  pyproject.toml
.claude/: settings.local.json
examples/: example_read_gage.m  example_read_gage_python.ipynb
examples/example_data/: example_aline_with_cal_file.cal  example_aline_with_cal_file_parameters.json  example_aline_without_cal_file.npy  example_aline_without_cal_file_parameters.json
read_gage/calibrations/: calibration_lookup.csv  h1177_p1477_rightangle.txt  h1344_p2040.txt  h1344_p2040_atten.txt  h1344_p2040_rightangle.txt  h1344_p2040_rightangle_atten.txt  h1393_p1322_rightangle_highgain.txt  h1393_p1322_rightangle_lowgain.txt
read_gage/matlab/: read_beammap_position.m  read_gage_output.m  read_npy.m
read_gage/python/: __init__.py  calibration_loader.py  output_readers.py
run_gage/: acquisition_workers.py  beammap_utils.py  config.py  controller.py  models.py  xps_control_main.py
run_gage/from_gage/: GageConstants.py  GageSupport.py  PyGage3_32.pyd  PyGage3_64.pyd
run_gage/gui/: app_aline.py  app_beammap.py  app_find_spatial_peak.py  app_find_spatial_peak_brent.py  app_mmode.py  app_motion_control.py  constants.py  plot_widgets.py  style_utils.py
run_gage/newportxps/: version.py
run_gage/tests/: test_acquisition_workers.py  test_beammap_outputs.py  test_beammap_plot_mapping.py  test_beammap_utils.py  (+4 more)
(+9 files in other folders)
